<?xml version="1.0"?>
<!--

    Copyright (C) 2014 Karlsruhe Institute of Technology (thomas.jejkal@kit.edu)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

            http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>edu.kit.dama</groupId>
  <artifactId>KITDM</artifactId>
  <name>KIT Data Manager</name>
  <packaging>pom</packaging>
  <version>1.1</version>
       
  <description>The main module containing all components of KIT Data Manager. The sub-modules are separated by functionality and may contain additional sub-modules.
    For building KIT Data Manager select one of the build profiles defined below.
  </description>
    
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
    <projectName>KITDataManager</projectName>
    <project.inceptionYear>2013-2014</project.inceptionYear>
    <firstName>Thomas</firstName>
    <lastName>Jejkal</lastName>
    <nameId>jejkal</nameId>
    <kit.datamanager.version>${project.version}_${scmBranch}</kit.datamanager.version>
    <root.relative.path>.</root.relative.path>
    <!--Deploy target identifier. Search for src/main/assembly/filter.$DEPLOY_TARGET.properties for available deploy targets.
    The default deploy target can be overwritten by command line arguments.
    -->
    <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'CEST'</maven.build.timestamp.format>
    <deploy.target>release</deploy.target>
  </properties>
  
  <!--Definition of custom repositories-->  
  <pluginRepositories>
    <pluginRepository>
      <id>miredot</id>
      <name>MireDot Releases</name>
      <url>http://nexus.qmino.com/content/repositories/miredot</url>
    </pluginRepository>
  </pluginRepositories>
  <repositories>
    <repository>
      <id>localRepository</id>
      <url>file://${basedir}/${root.relative.path}/libs</url>
    </repository>
    <repository>
      <id>dCache</id>
      <url>http://download.dcache.org/nexus/content/repositories/public</url>
    </repository>
    <repository>
      <id>Loci Repository</id>
      <url>http://dev.loci.wisc.edu/maven2/releases</url>
    </repository>
    <repository>
      <id>eclipselink</id>
      <layout>default</layout>
      <name>Repository for library Library[eclipselink]</name>
      <url>http://download.eclipse.org/rt/eclipselink/maven.repo</url>
    </repository>
    <repository>
      <id>miredot</id>
      <name>MireDot Releases</name>
      <url>http://nexus.qmino.com/content/repositories/miredot</url>
    </repository>
    <repository>
      <id>com.hypnoticocelot</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>
  
  <!--List of involved developers. Some others may only occur in sub-modules.-->
  <developers>
    <developer>
      <id>${nameId}</id>
      <name>${firstName} ${lastName}</name>
      <email>${firstName}.${lastName}@kit.edu</email>
      <organization>Karlsruhe Institute of Technology (KIT)</organization>
      <roles>
        <role>Project manager</role>
      </roles>
    </developer>
    <developer>
      <id>hartmann-v</id>
      <name>Volker Hartmann</name>
      <email>volker.hartmann@kit.edu</email>
      <organization>Karlsruhe Institute of Technology (KIT)</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>pasic</id>
      <name>Halil Pasic</name>
      <email>halil.pasic@kit.edu</email>
      <organization>Karlsruhe Institute of Technology (KIT)</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>tonne</id>
      <name>Danah Tonne</name>
      <email>danah.tonne@kit.edu</email>
      <organization>Karlsruhe Institute of Technology (KIT)</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>

  <!--Global dependencies available for all sub-modules with this pom.xml as parent.-->
  <dependencies>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-library</artifactId>
      <version>1.2.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.2.6</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.persistence</groupId>
      <artifactId>javax.persistence</artifactId>
      <version>2.1.0</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.persistence</groupId>
      <artifactId>eclipselink</artifactId>
      <version>2.5.1</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.persistence</groupId>
      <artifactId>org.eclipse.persistence.moxy</artifactId>
      <version>2.5.1</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.0.11</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.5</version>
    </dependency>
    <!--Switch to appropriate driver used for RDBMS access via JPA.-->
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>5.1.17</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>9.1-901.jdbc4</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.4</version>
    </dependency>
    <dependency>
      <groupId>commons-configuration</groupId>
      <artifactId>commons-configuration</artifactId>
      <version>1.7</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>commons-collections</groupId>
      <artifactId>commons-collections</artifactId>
      <version>3.2.1</version>
    </dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.7</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-compress</artifactId>
      <version>1.5</version>
    </dependency>
    <dependency>
      <groupId>org.fzk.ipe</groupId>
      <artifactId>Tools</artifactId>
      <version>1.5</version>
    </dependency>
  </dependencies>
  
  <build>
    <!--Extension needed for internal deployment via svn+ssh-->
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-ssh-external</artifactId>
        <version>2.6</version>
      </extension>
    </extensions>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.5.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
          <meminitial>512m</meminitial>
          <maxmem>1024m</maxmem>
          <fork>true</fork>
          <!--Custom annotation processor for parsing classes for securable resource annotations.--> 
          <annotationProcessors>
            <annotationProcessor>edu.kit.dama.authorization.annotations.SecurableResourceIdFieldProcessor</annotationProcessor>
            <annotationProcessor>edu.kit.dama.authorization.annotations.FilterOutputValidationProcessor</annotationProcessor>
          </annotationProcessors>
          <!--Enhanced memory management flags for compilation which may help to build KIT Data Manager by a single call without getting PermGenSpace errors.-->
          <argLine>-Xms512m -Xmx1024m -XX:+UseConcMarkSweepGC -XX:+CMSPermGenSweepingEnabled -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=128m</argLine>
        </configuration> 
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.16</version>
        <configuration>
          <argLine>-Xms512m -Xmx1024m -XX:-UseSplitVerifier -XX:+UseConcMarkSweepGC -XX:MaxPermSize=128m</argLine>
          <reuseForks>false</reuseForks>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>test</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>buildnumber-maven-plugin</artifactId>
        <version>1.3</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>create</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <format>{0}_rev.{1}</format>
          <items>
            <item>${kit.datamanager.version}</item>
            <item>scmVersion</item>
          </items>
          <doCheck>false</doCheck>
          <doUpdate>true</doUpdate>
          <revisionOnScmFailure>UNKNOWN_REVISION</revisionOnScmFailure>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Implementation-Build>${buildNumber}</Implementation-Build>
              <Build-Time>${maven.build.timestamp}</Build-Time>
            </manifestEntries>
          </archive>
          <excludes>
            <exclude>**/META-INF/persistence.xml</exclude>
            <exclude>**/datamanager.xml</exclude>
            <exclude>**/logback.xml</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Implementation-Build>${buildNumber}</Implementation-Build>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
     </plugins>
  </build>
  
  <scm>
    <developerConnection>https://github.com/orgs/kit-data-manager</developerConnection>
    <url>https://github.com/orgs/kit-data-manager</url>
  </scm>
     
  <!--KIT Data Manager modules of this parent project.-->
  <modules>
    <module>Authorization</module>
    <module>Commons</module>
    <module>DataOrganization</module>
    <module>MetaDataManagement</module>
    <module>DataWorkflow</module>
    <module>RestInterfaces</module>
    <module>Staging</module>
    <module>UserInterface</module>
    <module>Core</module>
    <module>Utils</module>
    <module>Documentation</module>
  </modules>
</project>